fix modal items name and price spacing

--- a/part-3/grocer.css
+++ b/part-3/grocer.css
@@ -147,14 +147,14 @@ body {
   z-index: 3;
 }
 
-.modal-body {
-  flex-direction: column;
-}
-
-.modal-header, .modal-body, .modal-footer  {
+.modal-header, .modal-items-section, .modal-footer  {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.modal-items-section {
+  flex-direction: column;
 }
 
 .cart-close:hover,
@@ -166,6 +166,13 @@ body {
 
 .modal-total-price {
   margin: 0 0 0 0%;
+}
+
+.modal-items-section > DIV {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 1% 0;
 }
 
 /* Modal Footer */
